<resources>
    <string name="app_name">Qwerty</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="accedi">Accedi</string>
    <string name="registrati">Registrati</string>
    <string name="reset_password">Password Dimenticata?</string>
    <string name="rememberme">Ricordami</string>
    <string name="post">Post</string>
    <string name="amici">Amici</string>
    <string name="modifica_profilo">Modifica Profilo</string>
    <string name="id_immagine">Id immagine</string>
    <string name="nome_profilo">Nome Profilo</string>
    <string name="descrizione">Descrizione</string>
    <string name="salva">Salva</string>
    <string name="login_fallito">Username o Password errati</string>
    <string name="chiamata_fallita">Problemi con il SERVER</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="follow">Follow</string>
    <string name="profile">Profile</string>
    <string name="login">Login</string>
    <string name="ok">OK</string>
    <string name="aggiungi_post">Aggiungi Post</string>
    <string name="conferma_aggiungi_post">Conferma Aggiunta Post</string>
</resources>