<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:ignore="MissingDefaultResource">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/home"
        android:title="@string/home" />

    <item
        android:id="@+id/nav_search"
        android:icon="@drawable/search"
        android:title="@string/search"/>

    <item
        android:id="@+id/nav_add"
        android:icon="@drawable/add"
        android:title="@string/add" />

    <item
        android:id="@+id/nav_follow"
        android:icon="@drawable/follow"
        android:title="@string/follow"/>

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/profile"
        android:title="@string/profile"/>

</menu>