<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/profileImage"
        android:layout_width="126dp"
        android:layout_height="124dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="88dp"
        app:civ_border_color="#FF000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/IdImmagine"
        android:layout_width="138dp"
        android:layout_height="44dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/black"
        android:hint="@string/id_immagine"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.142"
        app:layout_constraintStart_toEndOf="@+id/profileImage"
        app:layout_constraintTop_toTopOf="parent"
        app:title_header="@string/username" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/spunta"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="132dp"
        android:src="@drawable/tick"
        app:civ_border_color="#FF000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.148"
        app:layout_constraintStart_toEndOf="@+id/IdImmagine"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/NomeProfilo"
        android:layout_width="323dp"
        android:layout_height="44dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/black"
        android:hint="@string/nome_profilo"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileImage"
        app:title_header="@string/username" />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/Descrizione"
        android:layout_width="323dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:backgroundTint="@color/black"
        android:hint="@string/descrizione"
        android:maxHeight="200dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.477"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NomeProfilo"
        app:layout_constraintVertical_bias="0.0"
        app:title_header="@string/username" />

    <com.example.components.buttons.ConfirmButtonComponent
        android:id="@+id/edit_profile_button"
        android:layout_width="323dp"
        android:layout_height="46dp"
        android:layout_marginTop="64dp"
        android:text="@string/salva"
        android:theme="@style/confirm_button_style"
        app:layout_constraintEnd_toEndOf="@+id/Descrizione"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/profileImage"
        app:layout_constraintTop_toBottomOf="@+id/Descrizione" />

    <com.example.components.topBar.TopBarBackComponent
        android:id="@+id/topBarBackComponent"
        android:layout_width="412dp"
        android:layout_height="52dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>