<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.secondFragment.ModifyProfileFragment">


    <com.example.instagrammo.view.CustomViewController
        android:id="@+id/customViewController"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/modifica_profilo"/>


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/user_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="@+id/ModifyUsernameWrapper"
        app:layout_constraintTop_toBottomOf="@+id/customViewController" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/image_user_textId"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toEndOf="@id/user_image"
        app:layout_constraintTop_toBottomOf="@+id/user_image"
        app:layout_constraintTop_toTopOf="@id/user_image"
        app:layout_constraintWidth_percent="0.5">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/image_user_id"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/corners"
            android:enabled="true"
            android:fontFamily="@font/noto_sans"
            android:hint="@string/id_immagine"
            android:textSize="20sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/icon_check"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="4dp"
        android:src="@drawable/ic_check"
        app:layout_constraintStart_toEndOf="@id/image_user_textId"
        app:layout_constraintTop_toTopOf="@id/image_user_textId" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ModifyUsernameWrapper"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_user_textId">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/text_nome_profile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:background="@drawable/corners"
            android:enabled="true"
            android:fontFamily="@font/noto_sans"
            android:hint="@string/nome_profilo"
            android:textSize="20sp" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ModifyDescriptionWrapper"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ModifyUsernameWrapper">


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/descrizione"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:background="@drawable/corners"
            android:enabled="true"
            android:fontFamily="@font/noto_sans"
            android:hint="@string/descrizione"
            android:inputType="text"
            android:textSize="20dp"
            app:layout_constraintTop_toBottomOf="@id/loginTextUsernameWrapper" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/salva_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/corners"
        android:backgroundTint="@color/material_on_primary_disabled"
        android:fontFamily="@font/noto_sans"
        android:text="@string/salva"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>