<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_login">

    <view.main.CustomTopBar
        android:id="@+id/custom_edit_bar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:title="Modifica Profilo"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image_profile"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintTop_toBottomOf="@+id/custom_edit_bar"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_id_Mimmagine"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:hintTextAppearance="@style/MyHintStyle"
        app:layout_constraintTop_toBottomOf="@+id/custom_edit_bar"
        app:layout_constraintStart_toEndOf="@+id/image_profile"
        app:layout_constraintEnd_toStartOf="@+id/btn_salva_immagine">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_id_immagine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/et_bg"
            android:fontFamily="@font/allerta"
            android:hint="@string/id_immagine"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:padding="@dimen/medium"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_salva_immagine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/color_primary_dark"
        android:tint="@color/color_primary"
        android:src="@drawable/ic__done"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintTop_toBottomOf="@+id/custom_edit_bar"
        app:layout_constraintStart_toEndOf="@+id/et_id_Mimmagine"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_nome_Mprofilo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:hintTextAppearance="@style/MyHintStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_profile">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_nome_profilo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/et_bg"
            android:fontFamily="@font/allerta"
            android:hint="@string/nome_profilo"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:padding="@dimen/medium"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_descrizione_Mprofilo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:hintTextAppearance="@style/MyHintStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_nome_Mprofilo">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_descrizione_profilo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/et_bg"
            android:fontFamily="@font/allerta"
            android:hint="@string/descrizione_profilo"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:padding="@dimen/medium"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_salva"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:backgroundTint="@color/color_primary"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/salva"
        android:textAlignment="center"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>